Set min-height on inner-container-bottom so hopefully android keyboard won't fuck it up.

--- a/main.css
+++ b/main.css
@@ -41,6 +41,7 @@ body {
     justify-content: space-evenly;
     height: 0vh;
     max-height: 450px;
+    min-height: 450px;
     transition: 1000ms;
     visibility: hidden;
 }
