--- a/main.css
+++ b/main.css
@@ -216,6 +216,7 @@ body {
 }
 
 .start-button, .reset-button, .stop-audio {
+  background-color: #eee;
   border-radius: 2px;
   border: none;
   color: #333;
@@ -261,12 +262,81 @@ body {
   cursor: pointer;
 }
 
+.show-hide-timer-label {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  height: 50px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  width: 130px;
+}
+
+.show-hide-timer-label input {
+  height: 0;
+  opacity: 0;
+  width: 0;
+}
+
+.slider {
+  border-radius: 34px;
+  position: absolute;
+  cursor: pointer;
+  height: 20px;
+  top: 25;
+  left: 40;
+  bottom: 0;
+  background-color: #eee;
+  -webkit-transition: 400ms;
+  transition: 400ms;
+  width: 50px;
+}
+
+.slider:before {
+  border-radius: 50%;
+  position: absolute;
+  content: '';
+  height: 14px;
+  width: 14px;
+  left: 3px;
+  bottom: 3px;
+  background-color: #d514ff;
+  -webkit-transition: 400ms;
+  transition: 400ms;
+}
+
+input:checked + .slider {
+  background-color: #d514ff;
+}
+
+input:checked + .slider:before {
+  background-color: #eee;
+}
+
+input:focus + .slider {
+  -webkit-box-shadow: 0 0 1px #d514ff;
+          box-shadow: 0 0 1px #d514ff;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(29px);
+          transform: translateX(29px);
+}
+
 .clock {
   font-size: 5rem;
   font-variant-numeric: tabular-nums;
   text-align: center;
-  -webkit-transition: 1000ms;
-  transition: 1000ms;
+  -webkit-transition: 500ms;
+  transition: 500ms;
+  text-align: center;
   width: 100%;
 }
 
