--- a/main.scss
+++ b/main.scss
@@ -265,7 +265,7 @@ input:checked + .slider:before {
     font-size: 5rem;
     font-variant-numeric: tabular-nums;
     text-align: center;
-    transition: 500ms;
+    transition: color 500ms;
     text-align: center;
     width: 100%;
 }
